--- a/WDP Project Final/css/print.css
+++ b/WDP Project Final/css/print.css
@@ -1,7 +1,7 @@
 html {
     font-size: 14px;
     /*font-family: Arial, Helvetica, sans-serif;*/
-    font-family: 'News Cycle', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     color: white
 }
 
