--- a/WDP Project Final/css/print.css
+++ b/WDP Project Final/css/print.css
@@ -1,7 +1,10 @@
 html {
-    font-size: 14px;
-    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-size: 12px;
     font-family: 'PT Sans', sans-serif;
     color: white
 }
 
+.errorMessage {
+    background-color: none;
+    color: black;
+}
