--- a/WDP Project Final/css/table.css
+++ b/WDP Project Final/css/table.css
@@ -2,7 +2,7 @@
     padding: 10px;
     border-collapse: collapse;
     border: 2px solid;
-    width: 80%;
+    width: 90%;
 }
 
 .content-table th {
@@ -10,7 +10,7 @@
     padding: 10px;
     text-align: center;
     background-color: transparent;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -28,4 +28,11 @@
 
 .content-table tr:nth-child(odd) {
     background-color: transparent;
+}
+
+@media (min-width: 600px) {
+    .content-table th, .content-table tr {
+        -webkit-flex: auto;
+        flex: auto;
+    }
 }
