--- a/WDP Project Final/css/layout.css
+++ b/WDP Project Final/css/layout.css
@@ -1,6 +1,6 @@
 .page-sidebar {
     padding: 10px;
-    background-color: ivory;
+    background-color: whitesmoke;
 }
 
 @media (min-width: 600px) {
