--- a/WDP Project Final/css/base.css
+++ b/WDP Project Final/css/base.css
@@ -1,3 +1,6 @@
+/**
+ * Created by Tom on 03.01.15.
+ */
 body {
     width: 100%;
     height: 100%;
@@ -14,10 +17,11 @@ body {
     font-weight: bold;
     color: red;
     background-color: lightgoldenrodyellow;
+    text-align: center;
 }
 
 #gMaps {
-    height: 250px;
-    width: 400px;
+    height: 200px;
+    width: 300px;
     border: 1px solid;
 }
