--- a/WDP Project Final/css/table.css
+++ b/WDP Project Final/css/table.css
@@ -1,8 +1,11 @@
+/**
+ * Created by Tom on 03.01.15.
+ */
 .content-table {
     padding: 10px;
     border-collapse: collapse;
     border: 2px solid;
-    width: 90%;
+    width: 100%;
 }
 
 .content-table th {
